# advent-of-code

./: .flake8  .gitignore  .pre-commit-config.yaml  Pipfile  pyproject.toml
2020/src/: task01.py
2021/src/: task01.py  task02.py  task05.py
aoc_2020/data/: task04_example.txt
aoc_2020/src/: task01.py  task02.py  task03.py  task04.py  task05.py  task06.py  task07.py
aoc_2021/src/: task02.py  task03.py  task04.py  task05.py  task06.py  task07.py  task08.py  task09.py  task10.py  task11.py  task12.py  task13.py  task14.py  task15.py  task17.py  task20.py  task21.py  task22.py
aoc_2022/src/: task01.py  task02.py  task03.py  task04.py  task05.py  task06.py  task07.py  task08.py  task09.py  task10.py  task11.py  task14.py  task15.py
aoc_2023/src/: day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  task01.py
aoc_2024/src/: day01.py  day02.py  day03.py  day06.py
src/: task01.py  task02.py  task03.py  task04.py  task05.py  utils.py
utils/: __init__.py  utils.py
