[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "advent-of-code-data>=2.0.4",
    "joblib>=1.4.2",
    "more-itertools>=10.5.0",
    "numpy>=2.1.3",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.1",
]

[tool.mypy]
python_version = "3.13"
exclude = "src\\task02.py"
strict = true

[tool.ruff]
line-length = 99
lint.ignore = ["E741"]

[tool.ruff.lint.isort]
force-single-line = true
